修复live失效问题

--- a/docs/01-Java/01-JavaBase/01-lambda.mdx
+++ b/docs/01-Java/01-JavaBase/01-lambda.mdx
@@ -198,4 +198,7 @@ Set<String> nationalities = album.getMusicians()
     .collect(Collectors.<String>toSet());
 ```
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
