--- a/docs/01-Java/01-JavaBase/03-file upload.mdx
+++ b/docs/01-Java/01-JavaBase/03-file upload.mdx
@@ -273,4 +273,7 @@ public class TestHttpClientUpload1 {
 ```
 </details>
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
