--- a/docs/01-Java/02-Spring/01-Spring-Core.mdx
+++ b/docs/01-Java/02-Spring/01-Spring-Core.mdx
@@ -372,4 +372,7 @@ class Charter1Tests implements ApplicationContextAware {
 }
 ```
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
