--- a/docs/01-Java/02-Spring/06-ApplicationContext.mdx
+++ b/docs/01-Java/02-Spring/06-ApplicationContext.mdx
@@ -508,4 +508,7 @@ http://www.springframework.org/schema/context/spring-context-2.5.xsd">
 >
 > 1. 书籍名称：Spring揭秘 作者：王福强
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
