--- a/docs/01-Java/02-Spring/07-Joinpoint.mdx
+++ b/docs/01-Java/02-Spring/07-Joinpoint.mdx
@@ -236,4 +236,7 @@ public class Test4CGLIB {
 ```
 </details>
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
