--- a/docs/01-Java/02-Spring/09-Spring AOP Advice.mdx
+++ b/docs/01-Java/02-Spring/09-Spring AOP Advice.mdx
@@ -265,4 +265,7 @@ public class TesterFeatureIntroductionInterceptor extends DelegatingIntroduction
 ```
 </details>
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
