--- a/docs/01-Java/02-Spring/13-AspectJ AOP.mdx
+++ b/docs/01-Java/02-Spring/13-AspectJ AOP.mdx
@@ -666,4 +666,7 @@ public class MultiAdviceAspect {
 >
 > 1. 书籍 王福强-Spring揭秘
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
