--- a/docs/01-Java/02-Spring/14-AOP Configuration of Schema.mdx
+++ b/docs/01-Java/02-Spring/14-AOP Configuration of Schema.mdx
@@ -350,4 +350,7 @@ PT in methodmethod1]>>>>>StopWatch '': running time = 121900 ns; [] took 121900 
 >
 > 1. 书籍 王福强-Spring揭秘
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
