--- a/docs/01-Java/03-ProblemSummary/01-Oracle.mdx
+++ b/docs/01-Java/03-ProblemSummary/01-Oracle.mdx
@@ -103,4 +103,7 @@ prive Long primaryKey;
 int insertOne(XxxPo po)
 ```
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
