--- a/docs/01-Java/04-Interview/02-Java-Case-Interview-two.mdx
+++ b/docs/01-Java/04-Interview/02-Java-Case-Interview-two.mdx
@@ -432,4 +432,7 @@ Redis 基于Reactor 模型开发了文件事件处理器，这个文件事件处
 1. B站视频[地址](https://www.bilibili.com/video/BV1Eb4y1R7zd?)
 2. JDK 8 源码
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
