--- a/docs/01-Java/05-ConcurrentAndJVM/04-CPU memory domain.mdx
+++ b/docs/01-Java/05-ConcurrentAndJVM/04-CPU memory domain.mdx
@@ -550,4 +550,7 @@ public class DefaultThreadPool<Job extends Runnable> implements ThreadPool<Job> 
 > 1. 书籍名称：《java并发编程的艺术》 作者：方腾飞 魏鹏 程晓明
 
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
