--- a/docs/01-Java/06-DateBase/01-Oracle Procedure.mdx
+++ b/docs/01-Java/06-DateBase/01-Oracle Procedure.mdx
@@ -591,4 +591,7 @@ Oracle 创建用户授权登操作
 3. DBA操作 [其他dba操作 参考此博文](https://www.cnblogs.com/zbh355376/p/14273464.html)
 
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
