--- a/docs/01-Java/06-DateBase/04-Java-Case-Distribution.mdx
+++ b/docs/01-Java/06-DateBase/04-Java-Case-Distribution.mdx
@@ -54,4 +54,7 @@ sidebar_label: 分布式问题
 
 该锁不可重入，如果要实现可以维护当前获取锁线程的唯一标识，再重入时判断是否为当前获取锁的线程，是则默认获取锁成功。
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
