--- a/docs/01-Java/06-DateBase/06-Mybatis-Plus quick start.mdx
+++ b/docs/01-Java/06-DateBase/06-Mybatis-Plus quick start.mdx
@@ -90,4 +90,7 @@ public class SampleTest {
 usersMapper.selectOne(new QueryWrapper<JwtUserPO>().lambda().apply("USERNAME = {0,jdbcType=CHAR,typeHandler=" + TrimmedStringTypeHandler.class.getCanonicalName() + "}", username));
 ```
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
