--- a/docs/01-Java/07-DesignPattern/01-Design Pattern.mdx
+++ b/docs/01-Java/07-DesignPattern/01-Design Pattern.mdx
@@ -282,4 +282,7 @@ public class ControllerA {
 实体对象不能直接赋值，领域对象不能直接new出来，应该使用工厂方法，建造者模式来实现。
 
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
