--- a/docs/01-Java/08-middleware/01-Kafka.mdx
+++ b/docs/01-Java/08-middleware/01-Kafka.mdx
@@ -117,4 +117,7 @@ docker run --tty --interactive \
 
 参考资料涉及多种类型消息混合生产和消费。值得学习和借鉴。
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
