--- a/docs/02-Frontend/01-JQuery-revese-selector.mdx
+++ b/docs/02-Frontend/01-JQuery-revese-selector.mdx
@@ -88,4 +88,7 @@ $( "input[name!='newsletter']" ).next().append( "<b>; not newsletter</b>" );
 
 > 更多选择器用法请 [看这里](https://api.jquery.com/category/selectors/)
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
