--- a/docs/02-Frontend/02-vue-grammer-one.mdx
+++ b/docs/02-Frontend/02-vue-grammer-one.mdx
@@ -592,4 +592,7 @@ sidebar_label: Vue 基础1
 
 > 参考文献：**<font color="red">书籍《vue.js实战》</font>**
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
