--- a/docs/02-Frontend/03-vue-grammer-two.mdx
+++ b/docs/02-Frontend/03-vue-grammer-two.mdx
@@ -421,4 +421,7 @@ Vue set方法改变数组元素的内容
 
 > 参考文献：**<font color="red">书籍《vue.js实战》</font>**
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
