--- a/docs/02-Frontend/05-vue-project-notes.mdx
+++ b/docs/02-Frontend/05-vue-project-notes.mdx
@@ -158,4 +158,7 @@ VueRouter.prototype.push = function (location, resolve, reject) {
 
 节流：用户频繁操作，遏制用户执行的频率；
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
