--- a/docs/02-Frontend/06-vue route.mdx
+++ b/docs/02-Frontend/06-vue route.mdx
@@ -166,4 +166,7 @@ const inputText = ref<string>('hello')
 
 感谢您花费宝贵的时间来阅读文章。如果您觉得我的文章有用，请给予一点肯定。同时，随时提出您可能有的任何问题。
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
