--- a/docs/02-Frontend/08-pnpm.mdx
+++ b/docs/02-Frontend/08-pnpm.mdx
@@ -51,4 +51,7 @@ Problems
 
 Just delete the directory,display on the console `C:\Users\xx\AppData\Local\pnpm`
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
