--- a/docs/02-Frontend/10-uni-app.mdx
+++ b/docs/02-Frontend/10-uni-app.mdx
@@ -141,4 +141,7 @@ if url is `http:/` just one slash is wrong
 
 -
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
