--- a/docs/02-Frontend/12-tailwind.mdx
+++ b/docs/02-Frontend/12-tailwind.mdx
@@ -461,4 +461,7 @@ Almost 20-days learning and rewriting this project, maybe the project is too sma
 
 Thank you for your time. If my article helps you, please give it a clap. Also feel free to ask any questions you may have.
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
