--- a/docs/02-Frontend/16-Drag and Drop Container Movement.mdx
+++ b/docs/02-Frontend/16-Drag and Drop Container Movement.mdx
@@ -512,4 +512,7 @@ Here's the final, fully debugged version:
 
 This implementation provides a smooth, reliable dragging experience with proper click detection and boundary constraints. The step-by-step debugging process shows how small issues can compound into major usability problems, and how systematic testing and fixing leads to a robust solution.
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
