--- a/docs/03-Algorithm/02-Binary-Insert.mdx
+++ b/docs/03-Algorithm/02-Binary-Insert.mdx
@@ -57,4 +57,7 @@ public class BinaryInsertion {
 
 1. [B站王卓老师的视频](https://www.bilibili.com/video/BV1Eb4y1R7zd?)
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
