--- a/docs/05-ReadBook/01-Computor theory/04-计算机网络-网络应用.mdx
+++ b/docs/05-ReadBook/01-Computor theory/04-计算机网络-网络应用.mdx
@@ -176,4 +176,7 @@ UDP客户端：
 
 **https://www.icourse163.org/learn/HIT-154005?tid=1474180488#/learn/announce**
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
