--- a/docs/05-ReadBook/01-Computor theory/05-计算机网络-传输层.mdx
+++ b/docs/05-ReadBook/01-Computor theory/05-计算机网络-传输层.mdx
@@ -120,4 +120,7 @@ rdt3.0 分组会丢失
 
 **https://www.icourse163.org/learn/HIT-154005?tid=1474180488#/learn/announce**
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
