--- a/docs/05-ReadBook/02-Literature/01-ZhouLin-Connitive awaking-Unlock the drrving force for self-change.mdx
+++ b/docs/05-ReadBook/02-Literature/01-ZhouLin-Connitive awaking-Unlock the drrving force for self-change.mdx
@@ -48,4 +48,7 @@ sidebar_label: 开启自我改变的原动力
 
 > 冥想就是那种只要静坐在某处，然后放松身体，把注意力完全集中到呼吸和感受上的活动
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
