--- a/docs/05-ReadBook/02-Literature/02-unartulate-content.mdx
+++ b/docs/05-ReadBook/02-Literature/02-unartulate-content.mdx
@@ -10,4 +10,7 @@
 
 合成谬误 萨缪尔森提出来的。意即，对局部说来是对的东西，仅仅由于它对局部而言是对的，便说它对总体而言也必然是对的，这是一种谬误。
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
