--- a/docs/07-Container-Tech/docker/01-docker-chinese register mirror address.mdx
+++ b/docs/07-Container-Tech/docker/01-docker-chinese register mirror address.mdx
@@ -20,4 +20,7 @@ systemctl daemon-reload
 systemctl restart docker
 ```
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
