--- a/docs/07-Container-Tech/docker/04-idea-docker deployment.mdx
+++ b/docs/07-Container-Tech/docker/04-idea-docker deployment.mdx
@@ -181,4 +181,7 @@ services:
 
 ![image-20230705233312670](https://s2.loli.net/2023/07/15/azqiL7VdEQXxYtC.png)
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
