--- a/docs/08-Linux/01-Common-Shell-Command.mdx
+++ b/docs/08-Linux/01-Common-Shell-Command.mdx
@@ -92,4 +92,7 @@ sz 下载 rz 上传
 
 `kill -9 $(ps -ef | grep -w "xxx-1.0.jar" |  grep -v "grep" | awk '{print $2}')`
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
