--- a/docs/08-Linux/03-vmware-centos8 Expand or Shrink disk.mdx
+++ b/docs/08-Linux/03-vmware-centos8 Expand or Shrink disk.mdx
@@ -17,4 +17,7 @@ sidebar_label: Linux扩展磁盘空间
 [shrink centos 8 disk]: https://www.snad.cz/en/2020/06/16/shrink-centos-8-1-xfs-disk-in-vm/
 
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
