--- a/docs/09-Develop-Tools/01-Most used Git Commands.mdx
+++ b/docs/09-Develop-Tools/01-Most used Git Commands.mdx
@@ -319,4 +319,7 @@ git rebase feature-x  # 或者 git merge --ff-only feature-x
 ⚠️ 如果团队共享 dev，建议使用 merge 以免强制推送
 
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
