--- a/docs/09-Develop-Tools/04-Everything.mdx
+++ b/docs/09-Develop-Tools/04-Everything.mdx
@@ -23,4 +23,7 @@ sidebar_label: Everything 使用
 ## folder file
 `folder:` `file:`
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
