--- a/docs/09-Develop-Tools/05-dbeaver.mdx
+++ b/docs/09-Develop-Tools/05-dbeaver.mdx
@@ -9,4 +9,7 @@ sidebar_label: Everything 使用
 
 [DBeaver中如何调整SQL编辑器的字体大小](https://www.cnblogs.com/guolaoshi/p/11750723.html)
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
