--- a/docs/10-Others/01-Windowns/01-software-use-case.mdx
+++ b/docs/10-Others/01-Windowns/01-software-use-case.mdx
@@ -61,4 +61,7 @@ sidebar_label: 常用软件使用问题
 1. 在vscode中安装PicGo插件
 2. 在vscode中设置PicGo的Picgo: Config Path为 `C:\Users\xxx\AppData\Local\pnpm\global\5\node_modules\picgo\config.json`
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
