--- a/docs/10-Others/01-Windowns/03-command-usage.mdx
+++ b/docs/10-Others/01-Windowns/03-command-usage.mdx
@@ -11,4 +11,7 @@ sidebar_label: Windowns Command Usage
 tree /f
 ```
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
