--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -75,4 +75,6 @@ import CodeBlock from '@theme/CodeBlock';
 
 6. 页面申明 
 
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
