--- a/docs/01-Java/02-Spring/05-Bean Creating Process.mdx
+++ b/docs/01-Java/02-Spring/05-Bean Creating Process.mdx
@@ -283,4 +283,7 @@ public interface InitializingBean {
 >
 > 1. 书籍名称：Spring揭秘 作者：王福强
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
