--- a/docs/01-Java/02-Spring/11-Spring AOP Woven1.mdx
+++ b/docs/01-Java/02-Spring/11-Spring AOP Woven1.mdx
@@ -442,4 +442,7 @@ public class Test4ProxyFactoryBean {
 > 
 > 1. 书籍名称：Spring揭秘 作者：王福强
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
