--- a/docs/01-Java/02-Spring/12-Spring AOP Woven2.mdx
+++ b/docs/01-Java/02-Spring/12-Spring AOP Woven2.mdx
@@ -420,4 +420,7 @@ public class Test4AlternativeTargetSource {
 > 
 > 1. 书籍名称：Spring揭秘 作者：王福强
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
