--- a/docs/01-Java/03-ProblemSummary/03-github problems.mdx
+++ b/docs/01-Java/03-ProblemSummary/03-github problems.mdx
@@ -38,4 +38,7 @@ To https://github.com/Halcyon666/taco-shop.git
 [url "https://ghproxy.com/https://github.com"]
 ```
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
