--- a/docs/01-Java/05-ConcurrentAndJVM/01-volatile memory domain.mdx
+++ b/docs/01-Java/05-ConcurrentAndJVM/01-volatile memory domain.mdx
@@ -197,4 +197,7 @@ StoreLoad屏障:一个写线程写volatile变量，多个读线程读同一个vo
 > 1. 书籍名称：《java并发编程的艺术》 作者：方腾飞 魏鹏 程晓明
 
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
