--- a/docs/01-Java/05-ConcurrentAndJVM/02-final memory domain.mdx
+++ b/docs/01-Java/05-ConcurrentAndJVM/02-final memory domain.mdx
@@ -59,4 +59,7 @@ sidebar_label: final域内存知识
 写final域的重排序规则会要求编译器在final域的写之后，构造函数return之前插入一个StoreStore障屏。读final域的重排序规则要求编译器在读final域的操作前面插入一个LoadLoad屏障。由于X86处理器不会对写-写操作做重排序，所以在X86处理器中，写final域需要的StoreStore障屏会被省略掉。同样，由于X86处理器不会对存在间接依赖关系的操作做重排序，所以在X86处理器中，读final域需要的LoadLoad屏障也会被省略掉。也就是说，在X86处理器中，final域的读/写不会插入任何内存屏障！(在x86处理器中仅有StoreLoad屏障)
 
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
