--- a/docs/01-Java/05-ConcurrentAndJVM/05-lock.mdx
+++ b/docs/01-Java/05-ConcurrentAndJVM/05-lock.mdx
@@ -38,4 +38,7 @@ sidebar_label: 锁
 > 
 > 1. 书籍名称：《java并发编程的艺术》 作者：方腾飞 魏鹏 程晓明
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
