--- a/docs/01-Java/05-ConcurrentAndJVM/06-JAVA Virtual Machine.mdx
+++ b/docs/01-Java/05-ConcurrentAndJVM/06-JAVA Virtual Machine.mdx
@@ -174,4 +174,7 @@ G1(将整个堆划分为一个个小块，1-32M,RememberSet指向块的内存地
 > `</init>` `</clinit>`
 
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
