--- a/docs/02-Frontend/11-Integrate husky prettier etc.mdx
+++ b/docs/02-Frontend/11-Integrate husky prettier etc.mdx
@@ -96,4 +96,7 @@ This conclude eslint fix code and prettier format code.
 
 Thanks for your time, If you get something from my article, please give me clap, meanwhile, feel free to ask question as you need.
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
