--- a/docs/03-Algorithm/09-LeetCode return twomedian of two positive intergers.mdx
+++ b/docs/03-Algorithm/09-LeetCode return twomedian of two positive intergers.mdx
@@ -80,4 +80,7 @@ public class FindMedianSortedArrays {
 1. LEETCODE[视频地址](https://leetcode-cn.com/problems/median-of-two-sorted-arrays/solution/xun-zhao-liang-ge-you-xu-shu-zu-de-zhong-wei-s-114/)
 
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
