--- a/docs/05-ReadBook/01-Computor theory/02-Computer Composition Theory.mdx
+++ b/docs/05-ReadBook/01-Computor theory/02-Computer Composition Theory.mdx
@@ -238,4 +238,7 @@ ROM(Read Only Memory) 只能读，不能写入
 > [^2] 计算机体系结构 郑纬民，汤志忠 第二版
 
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
