--- a/docs/05-ReadBook/01-Computor theory/03-计算机网络-网络概述.mdx
+++ b/docs/05-ReadBook/01-Computor theory/03-计算机网络-网络概述.mdx
@@ -176,4 +176,7 @@ ISP（Internet Service Provider）互联
 
 **https://www.icourse163.org/learn/HIT-154005?tid=1474180488#/learn/announce**
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
