--- a/docs/10-Others/02-CnblogsThemeConfiguration/02-cnblogs-theme-silence configure plain style theme.mdx
+++ b/docs/10-Others/02-CnblogsThemeConfiguration/02-cnblogs-theme-silence configure plain style theme.mdx
@@ -125,4 +125,7 @@ background:white;
 > [本文参考文献](https://esofar.github.io/cnblogs-theme-silence/#/options?id=avatar)
 > [本文参考仓库地址](https://github.com/esofar/cnblogs-theme-silence/tree/master/dist)
 
+
+import TailProtocal from "@site/src/components/TailProtocal";
+
 <TailProtocal />
