--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -67,10 +67,9 @@ import CodeBlock from '@theme/CodeBlock';
 5. Details 折叠内容
 
 <details>
-  <summary>点击展开详细内容</summary>
-  这里是可折叠的内容，可以放更多说明或代码。
+	<summary>点击展开详细内容</summary>
+  <div>这里是可折叠的内容，可以放更多说明或代码。</div>
 </details>
-
 
 
 6. 页面申明 
