--- a/docs/10-Others/01-Windowns/01-software-use-case.mdx
+++ b/docs/10-Others/01-Windowns/01-software-use-case.mdx
@@ -58,6 +58,16 @@ sidebar_label: 常用软件使用问题
 
 ### 使用npm安装的`picgo`
 
+```shell
+# 查看 pnpm 全局安装路径
+pnpm root -g
+
+# 查找 picgo 位置
+pnpm list -g picgo
+```
+
+![20250920223240](https://s2.loli.net/2025/09/20/aW4mJGQHipP6o2e.png)
+
 1. 在vscode中安装PicGo插件
 2. 在vscode中设置PicGo的Picgo: Config Path为 `C:\Users\xxx\AppData\Local\pnpm\global\5\node_modules\picgo\config.json`
 
