--- a/docs/09-Develop-Tools/02-python-replacement-script.mdx
+++ b/docs/09-Develop-Tools/02-python-replacement-script.mdx
@@ -1,11 +1,6 @@
----
-title: py replacement
-sidebar_label: py replacement
----
-
 # 在多个文件中替换多个相应的内容
 
-### `main.py`
+## `main.py`
 
 ```python
 # main.py
@@ -66,7 +61,7 @@ for filename in file_list:
         output_file.write(final_modified_content)
 ```
 
-### `rules_module.py`
+## `rules_module.py`
 
 ```python
 # rules_module.py
@@ -84,11 +79,11 @@ rules = [
 
 ```
 
-### 替换所有空行
+## 替换所有空行
 
 `^\s*$\n+`
 
-### 替换包含 ABC 的行为空行
+## 替换包含 ABC 的行为空行
 
 `ABC(.*)\s*`
 
