添加字体颜色组件支持

--- a/docs/09-Develop-Tools/01-Most used Git Commands.mdx
+++ b/docs/09-Develop-Tools/01-Most used Git Commands.mdx
@@ -319,7 +319,9 @@ git rebase feature-x  # 或者 git merge --ff-only feature-x
 
 ### 在IDEA中PS Terminal中使用`git rebase -i`时无法退出
 
-If `rebase -i` , vim exit exceptionally, **Do not close terminal directly,  press `esc` and input `:q!` .**
+import MyHighlight from "@site/src/components/MyHighLight";
+
+`git rebae -i` 强制要求必须使用 <MyHighlight color="red">git base</MyHighlight> 来执行。
 
 ***The first way***
 
