支持背景色高亮

--- a/docs/09-Develop-Tools/01-Most used Git Commands.mdx
+++ b/docs/09-Develop-Tools/01-Most used Git Commands.mdx
@@ -321,7 +321,7 @@ git rebase feature-x  # 或者 git merge --ff-only feature-x
 
 import MyHighlight from "@site/src/components/MyHighLight";
 
-`git rebae -i` 强制要求必须使用 <MyHighlight color="red">git base</MyHighlight> 来执行。
+`git rebase -i` 强制要求必须使用<MyHighlight color="white" background="red">git rebase</MyHighlight> 来执行。
 
 ***The first way***
 
