--- a/docs/04-Python/01-Python Problems.mdx
+++ b/docs/04-Python/01-Python Problems.mdx
@@ -1,11 +1,6 @@
----
-title: Python使用问题
-sidebar_label: Python使用问题
----
+# Python 使用问题
 
-## Python 使用问题
-
-### pip 源设置 
+## pip 源设置 
 
 在 `C:\Users\xxx\pip`下创建 `pip.ini`文件，内容如下
 
@@ -20,72 +15,28 @@ extra-index-url =
 
 > [原文地址](https://zhuanlan.zhihu.com/p/623325525?utm_id=0&wd=&eqid=f10d0e060019cf940000000665767cd2)
 
-### 如何使用python虚拟环境
-
-- **使用 venv**
+## 如何使用python虚拟环境
 
 ```shell
-python3 -m venv myenv
+创建虚拟环境
+
+python -m venv .venv
+
+激活虚拟环境
+
+.\.venv\Scripts\Activate.ps1
 ```
 
-- **使用virtualenv**
+## 在VScode中使用jupyter
 
 ```shell
-pip install virtualenv
-virtualenv myenv
+# 升级pip
+python -m pip install --upgrade pip
+# 安装jupyter 
+python -m pip install ipykernel jupyter
+# 安装常用包
+pip install -r requirements.txt
 ```
-
-- **激活虚拟环境**
-
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
-
-<Tabs>
-<TabItem value="windows">
-
-```powershell
-myenv\Scripts\activate
-```
-
-</TabItem>
-
-<TabItem value="macOS or Linux">
-
-```shell
-source myenv/bin/activate
-```
-
-</TabItem>
-</Tabs>
-
-- 安装依赖
-
-```shell
-pip install package_name
-```
-
-- 退出虚拟环境
-
-  
-
-<Tabs>
-<TabItem value="windows">
-
-```powershell
-myenv\Scripts\deactivate.bat
-```
-
-</TabItem>
-
-<TabItem value="macOS or Linux">
-
-```shell
-deactivate
-```
-
-</TabItem>
-</Tabs>
-
 
 import TailProtocal from "@site/src/components/TailProtocal";
 
