--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,7 +1,6 @@
 # intro
 
-
-import Hello from '@site/src/components/Hello';
+import Hello from "@site/src/components/Hello";
 
 <Hello />
 
@@ -30,27 +29,23 @@ function Clock(props) {
 }
 ```
 
-## Tabs/TabItem 组件实现多标签内容 
+## Tabs/TabItem 组件实现多标签内容
 
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
 
 <Tabs>
   <TabItem value="java" label="Java">
-    ```java
-    System.out.println("Hello, Java!");
-    ```
+    ```java System.out.println("Hello, Java!"); ```
   </TabItem>
   <TabItem value="python" label="Python">
-    ```python
-    print("Hello, Python!")
-    ```
+    ```python print("Hello, Python!") ```
   </TabItem>
 </Tabs>
 
 ## Admonition 提示块
 
-import Admonition from '@theme/Admonition';
+import Admonition from "@theme/Admonition";
 
 <Admonition type="note" title="注意">
   这是一个提示块，可以用来高亮重要信息。
@@ -58,28 +53,82 @@ import Admonition from '@theme/Admonition';
 
 ## CodeBlock 高亮代码块
 
-import CodeBlock from '@theme/CodeBlock';
+import CodeBlock from "@theme/CodeBlock";
 
 <CodeBlock language="js" title="hello.js">
-{`console.log("Hello, world!");`}
+  {`console.log("Hello, world!");`}
 </CodeBlock>
 
 ## Details 折叠内容
 
 <details>
-	<summary>点击展开详细内容</summary>
+  <summary>点击展开详细内容</summary>
   <div>这里是可折叠的内容，可以放更多说明或代码。</div>
 </details>
 
-
-## 页面申明 
+## 页面申明
 
 import TailProtocal from "@site/src/components/TailProtocal";
 
 <TailProtocal />
 
-## 支持背景色高亮，字体颜色 
+## 支持背景色高亮，字体颜色
 
 import MyHighlight from "@site/src/components/MyHighLight";
 
 <MyHighlight color="white" background="red">红底白字</MyHighlight>
+
+## mdx 中支持的 Admonitions
+
+:::note
+注释内容
+:::
+
+:::tip
+提示内容
+:::
+
+:::info
+信息内容
+:::
+
+:::warning
+警告内容
+:::
+
+:::danger
+危险警告内容
+:::
+
+:::caution
+小心提醒内容
+:::
+
+## 代码块中的魔法
+
+- `title="HelloWorld.java"` 
+- `showLineNumbers`
+- `{3}` 只高亮第3行
+- `highlight-next-line` 高亮下一行
+- `highlight-start` 高亮开始 `highlight-end` 高亮结束
+
+```java title="HelloWorld.java" showLineNumbers
+public class HelloWorld {
+    public static void main(String[] args) {
+        // highlight-next-line
+        String s = "Hello World!";
+        // highlight-start
+        System.out.println(s);
+        System.out.println(s);
+        // highlight-end
+    }
+}
+```
+
+```java showLineNumbers {3}
+public class HelloWorld {
+    public static void main(String[] args) {
+        String s = "Hello World!";
+    }
+}
+```
