--- a/docs/01-Java/02-Spring/01-Spring-Core.mdx
+++ b/docs/01-Java/02-Spring/01-Spring-Core.mdx
@@ -69,7 +69,7 @@ import MyHighlight from "@site/src/components/MyHighLight";
  }
  ```
 
- 方法二：实现`ApplicationContextAware`拿到`beanFactory`对象，每次方法调用的时候都会获取到一个新的单例bean
+ 方法二：使用ObjectFactory，[请看这里](https://halcyon666.github.io/summary/Java/Spring/IoC%20Inject2/#通过objectfactory)
 
  ## `@Autowired` field底层实现
 
